--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enable Accessibility Service" />
+
+    <Button
+        android:id="@+id/btnTap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tap at (500,500)"
+        android:layout_marginTop="16dp" />
+
+    <Button
+        android:id="@+id/btnSwipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Swipe Up"
+        android:layout_marginTop="16dp" />
+
 </LinearLayout>
