--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -3,5 +3,5 @@
     android:accessibilityEventTypes="typeAllMask"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:notificationTimeout="100"
-    android:canPerformGestures="true"
-    android:description="@string/accessibility_service_description" />
+    android:canRetrieveWindowContent="true"
+    android:canPerformGestures="true" />
